--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -11,7 +11,7 @@
       href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap"
     />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>Quizzical Types</title>
+    <title>Corner</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
